# data-center-terraform

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Pipfile  README.md  aws_clean.py  config-scan.toml  config.auto.tfvars  config.auto.tfvars copy.example  config.auto.tfvars.example  config.tfvar  config.tfvars  config.tfvars.example  dc-infrastructure.tf  go.mod  go.sum  index.html  index.js  ingress.yaml  install.sh  install_wrapper.sh  installw.sh  kubeconfig_atlassian-dc-abrokes-test-cluster  locals.tf  main.go  outputs.json  outputs.tf  package.json  provider_version.tf  providers.tf  pyproject.toml  secrets.tf  ssh-controller.yaml  uninstall.sh  variables.tf  (+3 more)
.atlassian/: OWNER
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: FEATURE.yml  config.yml
.github/workflows/: add-ssh-keys-for-e2e.yaml  add-ssh-keys-for-e2e.yml  documentation-build.yaml  documentation-deploy.yaml  e2e-public-key.yaml  e2e-test-jsm.yaml  (+9 more)
docs/: mkdocs.yml  requirements.txt
installer/: config.py  constants.py  installer.py  manage.py  terraform.py  test_tfconfig.py  tfconfig.py
main/: main.go
permissions/: assume-role.sh  atlassian-policy.json  policy.json  policy1.json  policy2.json  test-permission.md  update-policy.sh
scripts/: cleanup.sh  collect_k8s_logs.sh  common.sh  generate-variables.sh  prepare-release.py  scale.sh  send_slack_notifications.sh
search/: search_index.json
templates/: terraform-backend.tf.tmpl  tfstate-locals.tf.tmpl
test/: dcapt-snapshots.json  go.mod  go.sum
(+334 files in other folders)
